[tool.poetry]
name = "ppo-mujoco-halfcheetah"
version = "0.1.0"
description = ""
authors = ["Giansimone Perrino <ghello@giansimone.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
torch = "^2.9.0"
gymnasium = {extras = ["mujoco"], version = "^1.2.1"}
tensorboard = "^2.20.0"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
